tests/src/frontend/typechecking/invalid/mutable_lambda_5.sk
fun apply(f: () ~> void): void {
  f()
}

fun no(): void {
  apply(() -> void)
}
